# droid

./: .gitignore  Cargo.toml  README.md
.github/workflows/: push.yml  release.yml
resources/: Android.json
src/: main.rs
versions/: Android.json
