[package]
name = "droid"
version = "0.1.0"
authors = ["wasabeef <dadadada.chop@gmail.com>"]
edition = "2018"
homepage = "https://github.com/wasabeef/droid"
repository = "https://github.com/wasabeef/droid"
categories = ["command-line-utilities"]
readme = "README.md"
keywords = ["prompt", "shell", "bash", "fish", "zsh"]
license = "MIT/Apache-2.0"
description = "A command-line tool for checking Android OS version history."

include = ["src/**/*.rs", "resources/Android.json"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.8"
reqwest = "0.9.22"
clap = "2.33.0"